* changed version to 0.1.0 for initial nuget release

--- a/DarkHelpers/DarkHelpers.csproj
+++ b/DarkHelpers/DarkHelpers.csproj
@@ -11,6 +11,11 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageIcon>icon.png</PackageIcon>
     <PackageId>Divis.DarkHelpers</PackageId>
+    <PackageTags>mvvm, xamarin.forms, wpf, command, observablecollection</PackageTags>
+    <NeutralLanguage>en-US</NeutralLanguage>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
