--- a/DarkHelpers.WPF/DarkHelpers.WPF.csproj
+++ b/DarkHelpers.WPF/DarkHelpers.WPF.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>DivisDarkHelpers.WPF</PackageId>
+    <PackageId>Divis.DarkHelpers.WPF</PackageId>
     <Version>0.1.1</Version>
     <Authors>Michal Diviš</Authors>
     <Product>DarkHelpers.WPF</Product>
