--- a/Sample.WPF/Sample.WPF.csproj
+++ b/Sample.WPF/Sample.WPF.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DarkHelpers.WPF\DarkHelpers.WPF.csproj" />
     <ProjectReference Include="..\DarkHelpers\DarkHelpers.csproj" />
+    <ProjectReference Include="..\Sample.Lib\Sample.Lib.csproj" />
   </ItemGroup>
 
 </Project>
