--- a/Sample.XF/Sample.XF/Sample.XF.csproj
+++ b/Sample.XF/Sample.XF/Sample.XF.csproj
@@ -11,13 +11,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\DarkHelpers.XF\DarkHelpers.XF.csproj" />
     <ProjectReference Include="..\..\DarkHelpers\DarkHelpers.csproj" />
     <ProjectReference Include="..\..\Sample.Lib\Sample.Lib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\CommandsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\HomeView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ObservableCollectionView.xaml">
+      <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
