* bumped package versions to 0.1.3

--- a/DarkHelpers.XF/DarkHelpers.XF.csproj
+++ b/DarkHelpers.XF/DarkHelpers.XF.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>0.1.2</Version>
+    <Version>0.1.3</Version>
     <PackageId>Divis.DarkHelpers.XF</PackageId>
+    <NeutralLanguage>en-US</NeutralLanguage>
     <Authors>Michal Diviš</Authors>
     <Description>Xamarin.Forms implementations for the general DarkHelpers library</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
