--- a/DarkHelpersTemplates/DarkHelpersTemplates.csproj
+++ b/DarkHelpersTemplates/DarkHelpersTemplates.csproj
@@ -10,11 +10,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{A959AD8D-B6D7-4884-A9CD-CC9F9D8772C6}</ProjectGuid>
+    <ProjectGuid>{9769B205-EB2F-455B-9FF4-D2EE69E219E0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DarkHelpers.Templates</RootNamespace>
-    <AssemblyName>DarkHelpers.Templates</AssemblyName>
+    <RootNamespace>DarkHelpersTemplates</RootNamespace>
+    <AssemblyName>DarkHelpersTemplates</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
@@ -46,7 +46,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DarkHelpers.TemplatesPackage.cs" />
+    <Compile Include="DarkHelpersTemplatesPackage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -61,23 +61,11 @@
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.8.3038" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DarkHelpers.WPF.View\DarkHelpers.WPF.View.csproj">
-      <Project>{D4526541-E8DE-4043-9599-E8877EAF0D80}</Project>
-      <Name>DarkHelpers.WPF.View</Name>
-      <VSIXSubPath>ItemTemplates</VSIXSubPath>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-      <IncludeOutputGroupsInVSIX>TemplateProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
-    </ProjectReference>
-    <ProjectReference Include="..\DarkHelpers.XF.View\DarkHelpers.XF.View.csproj">
-      <Project>{9FF49448-DACE-48C4-9E91-4DABBBBCE71E}</Project>
-      <Name>DarkHelpers.XF.View</Name>
-      <VSIXSubPath>ItemTemplates</VSIXSubPath>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-      <IncludeOutputGroupsInVSIX>TemplateProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="DarkHelpers.Templates.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="license.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
