--- a/DarkHelpersTemplates/DarkHelpersTemplates.csproj
+++ b/DarkHelpersTemplates/DarkHelpersTemplates.csproj
@@ -49,6 +49,16 @@
     <Compile Include="DarkHelpersTemplatesPackage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="DarkHelpers.WPF.View.zip" />
+    <None Include="DarkHelpers.XF.View.zip" />
+    <Content Include="ItemTemplates\DarkHelpers.WPF.View.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="ItemTemplates\DarkHelpers.XF.View.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
