--- a/DarkHelpers.XF/DarkHelpers.XF.csproj
+++ b/DarkHelpers.XF/DarkHelpers.XF.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
   </ItemGroup>
 
