--- a/src/DarkHelpers/DarkHelpers.csproj
+++ b/src/DarkHelpers/DarkHelpers.csproj
@@ -12,7 +12,7 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/michaldivis/DarkHelpers</PackageProjectUrl>
         <RepositoryUrl>https://github.com/michaldivis/DarkHelpers</RepositoryUrl>
-        <PackageReleaseNotes>More FireAndForget options, added targets</PackageReleaseNotes>
+        <PackageReleaseNotes></PackageReleaseNotes>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageIcon>icon.png</PackageIcon>
         <PackageId>Divis.DarkHelpers</PackageId>
