--- a/src/DarkHelpers.XF/DarkHelpers.XF.csproj
+++ b/src/DarkHelpers.XF/DarkHelpers.XF.csproj
@@ -10,6 +10,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
     <PackageProjectUrl>https://github.com/michaldivis/DarkHelpers</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/michaldivis/DarkHelpers</RepositoryUrl>
     <PackageTags>mvvm, xamarin.forms, command, observablecollection, navigation service</PackageTags>
     <PackageReleaseNotes></PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
