added build project

--- a/src/DarkHelpers.Maui/DarkHelpers.Maui.csproj
+++ b/src/DarkHelpers.Maui/DarkHelpers.Maui.csproj
@@ -28,7 +28,7 @@
 		<PackageProjectUrl>https://github.com/michaldivis/DarkHelpers</PackageProjectUrl>
         <RepositoryUrl>https://github.com/michaldivis/DarkHelpers</RepositoryUrl>
 		<PackageTags>mvvm, maui, command, observablecollection, navigation service</PackageTags>
-		<PackageReleaseNotes></PackageReleaseNotes>
+		<PackageReleaseNotes>See https://github.com/michaldivis/DarkHelpers/releases</PackageReleaseNotes>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
