--- a/src/DarkHelpers.WPF/DarkHelpers.WPF.csproj
+++ b/src/DarkHelpers.WPF/DarkHelpers.WPF.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net5.0-windows;net6.0-windows</TargetFrameworks>
+	<Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>Divis.DarkHelpers.WPF</PackageId>
